# snake

./: .gitignore  CMakeLists.txt  README.md  run_validation.sh  test_astar_coverage.sh
.github/: copilot-instructions.md
src/: agent.hpp  astar_coverage_test.cpp  cell_tree_agent.hpp  cell_tree_utils.hpp  cheat_agent.hpp  differential_connectivity.hpp  game.hpp  game_util.hpp  path_planning_result.hpp  shortest_path.hpp  snake.cpp  snake_path_planner.hpp  unreachable_validator.hpp  validate_unreachables.cpp
visualize/: flood_fill_debug.html  flood_fill_debug.js  index.html  main.js  style.css
